# pollinations

./: .all-contributorsrc  .codemap-state.json  .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  .sops.yaml  .windsurfrules  AGENTS.md  APIDOCS.md  BOUNTY-4658-SOLUTION.md  BRANCH_CLEANUP.md  BRING_YOUR_OWN_POLLEN.md  CHANGELOG.md  CLAUDE.md  CLOUDFLARE_MIGRATION.md  CODE_OF_CONDUCT.md  COMMENT.md  COMPLETE-INTEGER-MIGRATION.md  CONTRIBUTING.md  Claude.md  Country-Routed Checkout Plan.md  DESIGN_REFACTOR_PLAN.md  DEVELOP.md  Design Audit.html  Dockerfile  FAQ.md  IMPLEMENTATION_SUMMARY.md  ISSUE_RESELLER_SYSTEM.md  LEGAL_FOLLOWUP.md  LICENSE  MODEL_PRICING_PLAN.md  MODEL_SCOUT_PLAN.md  Makefile  NEWS.md  PDF_REPLACEMENT_QUICK_REF.py  PDF_TEXT_REPLACEMENT_RESEARCH.md  PENTEST-FINDINGS.md  PRICING.md  (+117 more)
.claude/: HANDOVER.md  WEB_SEARCH_SETUP.md  settings.json  settings.local.json
.cursor/: hooks.json
.github/: CODEOWNERS  FUNDING.yml  WORKFLOWS.md  copilot-instructions.md
.husky/: pre-commit
.letta/: settings.json  settings.local.json
.mentat/: GitHub-Stars.md  README.md  precommit.sh  setup.sh
.playwright-mcp/: page-2026-06-25T15-29-28-935Z.yml  page-2026-06-25T15-34-31-118Z.yml
.well-known/: funding-manifest-urls
GSOC/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  MENTORS.md  PLAN.md  TIMELINE.md
NEWS/: 2025-09-13.md  2025-09-27.md  2025-10-18.md  2025-10-25.md  2025-11-15.md  2025-12-03.md  2025-12-05.md  2025-12-07.md  2025-12-08.md  2025-12-15.md  2025-12-22.md  2025-12-29.md  LINKS.md
SDK/Python/: LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini
SDK/Python/blossom_ai/: __init__.py  _version.py  client.py
SDK/Python/blossom_ai/core/: __init__.py  config.py  errors.py  interfaces.py  models.py  session_manager.py
SDK/Python/blossom_ai/docs/: API_CONFIG.md  API_IMAGE.md  API_REFERENCE.md  API_TEXT.md  API_VISION.md  ARCHITECTURE.md  ASYNC_PATTERNS.md  BUILDER_PATTERN.md  CACHING.md  CELERY.md  CHANGELOG.md  CLIENT.md  CODE_STYLE.md  CONFIGURATION.md  CONNECTION_POOLING.md  CONSENSUS.md  CONTRIBUTING.md  CUSTOM_COMPONENTS.md  DATA_PIPELINE.md  DEBUGGING.md  DEPENDENCY_INJECTION.md  DISCORD_BOT.md  DOCKER.md  ERROR_HANDLING.md  ERROR_TYPES.md  FACTORY_PATTERN.md  FASTAPI.md  FILE_READER.md  FLASK.md  FUNCTION_CALLING.md  GENERATORS.md  IMAGE_ADVANCED.md  IMAGE_BATCH.md  IMAGE_GENERATION.md  IMAGE_URLS.md  INDEX.md  INSTALLATION.md  JSON_MODE.md  LINKS.md  LOGGING.md  (+21 more)
SDK/Python/blossom_ai/generators/: __init__.py  base_generator.py  image_generator.py  parameter_builder.py  text_generator.py
SDK/Python/blossom_ai/utils/: __init__.py  async_utils.py  cache.py  http_client.py  logging.py  rate_limiter.py  security.py
SDK/Python/blossom_ai/utils/reasoning/: __init__.py  advanced.py  reasoning.py
SDK/Python/blossom_ai/utils/sugar_layer/: __init__.py  simple.py
SDK/Python/tests/: conftest.py  test_advanced_reasoning.py  test_async_utils.py  test_base_generator.py  test_cache.py  test_client.py  test_config.py  test_coverage.py  test_e2e.py  test_errors.py  test_generators.py  test_http_client.py  test_logging.py  test_models.py  test_parameter_builder.py  test_reasoning.py  test_security.py  test_session_manager.py  test_sugar_integration.py  test_sugar_layer.py  test_utils.py
affiliate/: README.md  affiliates.js  combined_affiliates.json  custom_affiliate_list.json  package.json
app/: .cursorrules  .gitignore  .prettierrc  README.md  commit.json  entry.server.tsx  layout.tsx  netlify.toml  package-lock.json  package.json  page.tsx  pnpm-lock.yaml  root.tsx  social-post.dockerfile
apps/: .env.example  .gitkeep  APPS.md  APP_IDEAS.md  GARDEN.md  GREENHOUSE.md  IDEAS.md  README.md  TODO.md  apps.json  test-turnstile.html
apps/polli-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/polli-agent/deploy/cf/: package-lock.json  package.json  worker.js  wrangler.jsonc
apps/polli-agent/docs/superpowers/specs/: 2026-07-10-polli-agent-loop-design.md
apps/polli-agent/scripts/: test_combos.py
apps/polli-agent/src/polli_agent/: __init__.py  __main__.py  agent.py  api.py  config.py  knowledge.py  main.py  registry.py  toolset.py
apps/polli-agent/src/polli_agent/tools/: __init__.py  gen.py  media.py  shell.py
apps/polli-agent/tests/: conftest.py  test_agent_loop.py  test_api_content.py  test_api_stream.py  test_config.py  test_fetch_retry.py  test_live.py  test_media_tools.py  test_smoke.py  test_video_frames.py
apps/polly/polly-core/: Cargo.toml  pyproject.toml
apps/polly/polly-core/src/: chunker.rs  files.rs  hash.rs  html.rs  lib.rs  search.rs  tokenizer.rs
auth.pollinations.ai/: .dev.vars.prod  .dev.vars.staging  .encrypted.vars.env  .gitignore  PERFORMANCE_INVESTIGATION.md  README.md  REFERRER_TOKEN_REPORT.md  WILDCARD_DOMAINS.md  apply-indexes.js  common-sql-queries.sh  deploy-with-migrations.js  deploy.js  package-lock.json  package.json  set-tier.js  test-json-optimization.js  test-token-performance.js  test-wildcard-domains.js  test_get_metrics.sh  tsconfig.json  vite.config.ts  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
bees/: COMPARISON.md  PLAN.md  QUICKSTART.md  README.md  api-scopes-billing.md  storage-backends.md
cloudflare-image-cache/: .gitignore  README.md  package.json  test-local.js  worker.js  wrangler.toml
cloudflare-migration/: package-lock.json  package.json  tsconfig.json  wrangler.toml
colabs/: Big_Sleep.ipynb.disabled  CLIP_Guided_Diffusion_+_ESRGAN.ipynb  CLIP_Guided_Diffusion_2.ipynb  CLIP_Guided_Diffusion_HQ.ipynb  CLIP_Guided_VQGan.ipynb  GhibliCycleGAN.ipynb  clip.ipynb  (+12 more)
pollinations.py/: CHANGELOG.md  README.md  __init__.py  pyproject.toml  setup.py
pollinations.py/_core/: _dtypes.py  _handler.py
pollinations.py/abc/: __init__.py  gitprotocol.py  imageprotocol.py
pollinations.py/ai/: __init__.py
pollinations.py/egg/: PKG-INFO  SOURCES.txt
pollinations.py/ext/: __init__.py
pollinations.py/models/: __init__.py  imagemodel.py
pollinations.py/types/: ImageModel.py  ImageObject.py  __init__.py  gitobject.py  imageobject.py
(+11903 files in other folders)
