[package]
name = "polly-core"
version = "0.1.0"
edition = "2024"
description = "High-performance Rust core for Polly Discord bot"

[lib]
name = "polly_core"
crate-type = ["cdylib"]

[dependencies]
# PyO3 bridge
pyo3 = { version = "0.24", features = ["extension-module"] }

# Tokenization
tiktoken-rs = "0.6"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
hex = "0.4"

# File collection
walkdir = "2"

# Code parsing (AST-aware chunking) - Phase 2
# tree-sitter = "0.24"

# Vector search - Phase 3 (currently using in-memory brute-force)
# usearch = "2"
# tantivy = "0.22"

# HTML parsing
scraper = "0.22"

# Reranking (ONNX Runtime)
# ort for reranking - Phase 4 (uncomment when needed)
# ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Concurrency
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
